# licican

./: .coverage  .dockerignore  .env.example  .gitignore  1_rol-product-manager.sh  2_rol-developer-teams.sh  3_rol-qa-teams.sh  4_rol-doc-teams.sh  5_rol-agile-coach.sh  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run-codex.sh
agile-coach/: AGENTS.md  acuerdos-operativos.md  analisis-proceso.md  mejoras-propuestas.md  metricas-flujo.md  prompt-agile-coach.md  retrospectiva.md  riesgos-de-coordinacion.md
bbdd/: .env.example  01-schema.sql  Dockerfile  README.md  docker-compose-bbdd.yml  importar_licitaciones.py  requirements.txt  seed_superadmin.py
changelog/: 2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-03-24.md  2026-03-25.md  2026-03-26.md  2026-03-27.md  2026-03-28.md  2026-03-29.md  2026-03-30.md  2026-03-31.md  2026-04-01.md  2026-04-02.md  2026-04-03.md  2026-04-04.md
data/: alerts.json  licitaciones_ti_canarias.xlsx  users.json
developer-teams/: AGENTS.md  prompt-developer-teams.md
doc-teams/: AGENTS.md  README.md  faq.md  glosario.md  guia-despliegue.md  guia-instalacion.md  manual-administracion.md  manual-tecnico.md  manual-usuario.md  matriz-trazabilidad.md  prompt-doc-teams.md
product-manager/: AGENTS.md  casos-de-uso.md  definicion-de-hecho.md  especificacion-funcional-gestion-licitaciones.md  especificacion-funcional-gestion-usuarios.md  historias-de-usuario.md  issues-github.md  product-backlog.md  prompt-product-manager.md  (+4 more)
(+110 files in other folders)
